<resources>
    <string name="app_name">Carteira</string>
    <string name="lancamento">Lançamento</string>
    <string name="descricao">Descrição</string>
    <string name="entrada">Entrada</string>
    <string name="saida">Saída</string>
    <string name="valor">Valor</string>
    <string name="cadastrar">Cadastrar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>